force-app/main/default/objects/Related_List_Field_Configuration__mdt/fields/Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Field_Label__c</fullName>
    <description>Field label to display as column header in the Related List. If this label is not provided, then Original field label corresponding to the Field API name will be used.</description>
    <inlineHelpText>Field label to display as column header in the Related List. If this label is not provided, then Original field label corresponding to the Field API name will be used.</inlineHelpText>
    <label>Field Label</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>