force-app/main/default/objects/Related_List_Field_Configuration__mdt/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <description>API Name of the field to display in Related List.</description>
    <inlineHelpText>API Name of the field to display in Related List.</inlineHelpText>
    <label>Field Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>