force-app/main/default/objects/Related_List_Field_Configuration__mdt/fields/Filter__c.field-meta.xml
<CustomField>
    <fullName>Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable filtering by this column. Distinct values in the column will be available as filter values</description>
    <inlineHelpText>Enable filtering by this column. Distinct values in the column will be available as filter values</inlineHelpText>
    <label>Enable Filter</label>
    <type>Checkbox</type>
</CustomField>