force-app/main/default/objects/Related_List_Field_Configuration__mdt/fields/Related_List_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Related_List_Configuration__c</fullName>
    <description>Associate Parent, Child object combination to consider the field to be displayed.</description>
    <label>Related List Configuration</label>
    <referenceTo>Related_List_Configuration__mdt</referenceTo>
    <relationshipLabel>Related List Field Configurations</relationshipLabel>
    <relationshipName>Related_List_Field_Configurations</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>