force-app/main/default/objects/Related_List_Field_Configuration__mdt/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>The position of the column displayed in the Related List.</description>
    <inlineHelpText>The position of the column displayed in the Related List.</inlineHelpText>
    <label>Sequence</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>