force-app/main/default/objects/Related_List_Field_Configuration__mdt/fields/Sortable__c.field-meta.xml
<CustomField>
    <fullName>Sortable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable sorting on the column</description>
    <inlineHelpText>Enable sorting on the column</inlineHelpText>
    <label>Sortable</label>
    <type>Checkbox</type>
</CustomField>